--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.18.2",
+    "mongoose": "^7.4.4",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
