--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.4.4",
     "nodemon": "^3.0.1",
-    "slugify": "^1.6.6"
+    "redis": "^4.6.12",
+    "slugify": "^1.6.6",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "helmet": "^7.0.0",
